Added multi gold ball functionality

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
+	<div class="circle red gold" ></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
@@ -169,6 +170,7 @@
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
+	<div class="circle red gold" ></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
@@ -215,7 +217,7 @@
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
-	<div class="circle red" id="gold"></div>
+	<div class="circle red gold" ></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
@@ -291,7 +293,7 @@
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
-	<div class="circle red" id ="black" id="gold"></div>
+	<div class="circle red gold" ></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
 	<div class="circle red"></div>
